--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "kafka-node": "^2.4.1",
-    "nodemon": "^1.17.3"
+    "body-parse": "^0.1.0",
+    "body-parser": "^1.19.0",
+    "kafka-node": "^2.6.1",
+    "nodemon": "^1.19.1"
   }
 }
